--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:toolkit="http://schemas.microsoft.com/wpf/2008/toolkit"
-        Title="Avans PAZ" Height="784" Width="819" Icon="/PAZ;component/Resources/paz.ico">
+        Title="Avans PAZ" Height="784" Width="819" Icon="/PAZ;component/Resources/paz.ico" Closing="Window_Closing">
     <Grid Background="#FFD51D53" DataContext="{Binding}" ShowGridLines="False" ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="612*" />
@@ -13,10 +13,16 @@
                 <ImageBrush ImageSource="/PAZ;component/Resources/AvansLogo.png" />
             </Label.Background>
         </Label>
+        <Label Height="24" Margin="0,52,10,0" Name="btnOpenUnplannedWindow" VerticalAlignment="Top" HorizontalAlignment="Right" Width="24" Cursor="Hand" MouseDown="btnOpenUnplannedWindow_MouseDown" ToolTip="Opent een scherm met alle paren die nog niet gepland zijn.">
+            <Label.Background>
+                <ImageBrush ImageSource="/PAZ;component/Resources/UnplannedWindowButtonBg.png" />
+            </Label.Background>
+        </Label>
         <TabControl SelectedIndex="1" Margin="12,53,6,12" Name="tabControl" Background="White" Grid.RowSpan="2"><!-- MaxWidth="1035" HorizontalAlignment="Left">-->
             <TabItem Header="Calender" Name="tabCalender" Background="White" Padding="5" Width="80" HorizontalAlignment="Center">
                 <ScrollViewer HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto">
-                    <my:CalendarView x:Name="calendar"/>
+                    <my:CalendarView x:Name="calendar">
+                    </my:CalendarView>
                 </ScrollViewer>
             </TabItem>
             <TabItem Header="Overzicht" Name="tabItemOverzicht" Background="White" Padding="5" Width="80" HorizontalAlignment="Center">
