--- a/PAZ/View/UnPlannedPairs.xaml
+++ b/PAZ/View/UnPlannedPairs.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="Nog te plannen" Height="696" Width="279" Icon="/PAZ;component/Resources/paz.ico">
-    <Grid Background="#FFD51D53" DataContext="{Binding}" ShowGridLines="False" ClipToBounds="True">
+    <Grid Background="#FFD51D53" ShowGridLines="False" ClipToBounds="True">
         <Grid.RowDefinitions>
             <RowDefinition Height="10" />
             <RowDefinition />
