--- a/PAZ/View/LetterWindow.xaml
+++ b/PAZ/View/LetterWindow.xaml
@@ -6,14 +6,40 @@
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Brief aanpassen" Name="tiBrief">
                 <Grid>
-                    <TextBox HorizontalAlignment="Left" Margin="117,150,0,169.723" Name="tbInformatie" Width="385" Text="" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" />
-                    <TextBox AcceptsReturn="True" AcceptsTab="True" Height="68.723" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="117,75,0,0" Name="tbInleiding" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
-                    <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="117,244,0,86.723" Name="tbAfsluiting" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
-                    <Label Content="Inleiding:" Height="28" HorizontalAlignment="Left" Margin="6,75,0,0" Name="lblWaarschuwing" VerticalAlignment="Top" FlowDirection="LeftToRight" HorizontalContentAlignment="Right" Width="104.75" />
-                    <Label Content="Informatie:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,150,0,0" Name="lblInformatie" VerticalAlignment="Top" Width="104.75" />
-                    <Label Content="Afsluiting:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,244,0,0" Name="lblAfsluiting" VerticalAlignment="Top" Width="104.75" />
-                    <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="117,327,0,27.723" Name="tbAfzenders" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
-                    <Label Content="Afzenders:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,327,0,0" Name="lblAfzenders" VerticalAlignment="Top" Width="104.75" />
+                    <TextBox HorizontalAlignment="Left" Margin="141,118.723,0,151.04" Name="tbInformatie" Width="385" Text="" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" Height="68.723" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,44,0,0" Name="tbInleiding" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,298,0,85.04" Name="tbAfzenders" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Avans locatie:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10,10,0,0" Name="lblAvansLocatie" VerticalAlignment="Top" Width="125" />
+                    <Label Content="Begin kern:" Height="28" HorizontalAlignment="Left" Margin="10,42,0,0" Name="lblBeginKern" VerticalAlignment="Top" FlowDirection="LeftToRight" HorizontalContentAlignment="Right" Width="125" />
+                    <Label Content="Reis informatie:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,118.723,0,0" Name="lblReisInformatie" VerticalAlignment="Top" Width="129" />
+                    <Label Content="Afzenders:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10,296,0,0" Name="lblAfzenders" VerticalAlignment="Top" Width="125" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,330,0,24.723" Name="tbBijlagen" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Bijlagen:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10,330,0,0" Name="lblBijlagen" VerticalAlignment="Top" Width="125" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" Height="26" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,12,0,0" Name="tbAvansLocatie" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,264,0,117.04" Name="tbVerdereInformatie" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Verdere informatie:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,264,0,0" Name="lblVerdereInformatie" VerticalAlignment="Top" Width="129" />
+                </Grid>
+            </TabItem>
+            <TabItem Header="Brief informatie aan passen" Name="tiInformatie">
+                <Grid>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="80*" />
+                        <ColumnDefinition Width="572*" />
+                    </Grid.ColumnDefinitions>
+                    <Label Content="Kenmerk:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,15,0,0" Name="lblKenmerk" VerticalAlignment="Top" Width="125" Grid.ColumnSpan="2" />
+                    <TextBox Height="26" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,17,0,0" Name="tbKenmerk" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" Grid.Column="1" />
+                    <Label Content="Contactpersonen:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,47,0,0" Name="lblContactpersonen" VerticalAlignment="Top" Width="125" />
+                    <TextBox Grid.Column="1" Height="26" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,49,0,0" Name="tbContactpersonen" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Telefoon:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,79,0,0" Name="lblTelefoon" VerticalAlignment="Top" Width="125" />
+                    <TextBox Grid.Column="1" Height="26" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,81,0,0" Name="tbTelefoon" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="E-mail:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,111,0,0" Name="lblEmail" VerticalAlignment="Top" Width="125" />
+                    <TextBox Grid.Column="1" Height="26" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,113,0,0" Name="tbEmail" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Voettekst links:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,143,0,0" Name="lblVoettekstLinks" VerticalAlignment="Top" Width="125" />
+                    <TextBox Grid.Column="1" Height="65" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,145,0,0" Name="tbVoettekstLinks" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" AcceptsReturn="True" AcceptsTab="True" />
+                    <Label Content="Voettekst midden:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,214,0,0" Name="lblVoettekstMidden" VerticalAlignment="Top" Width="125" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" Grid.Column="1" Height="65" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,216,0,0" Name="tbVoettekstMidden" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <Label Content="Voettekst rechts:" FlowDirection="LeftToRight" Grid.ColumnSpan="2" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="6,285,0,0" Name="lblVoettekstRechts" VerticalAlignment="Top" Width="125" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" Grid.Column="1" Height="65" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="57,287,0,0" Name="tbVoettekstRechts" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
                 </Grid>
             </TabItem>
             <TabItem Header="Geadresseerden selecteren" Name="tiGeadresseerden">
