Alle invul velden voor het nieuwe window lezen nu uit de database en schrijven ernaar terug.
Ben van plans Dinsdag de brief functie ook daadwerkelijk deze gegevens te laten gebruiken.

Signed-off-by: Yorg Kuijs <yorg.kuijs@home.nl>

--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -259,17 +259,21 @@
                             </Grid>
                         </GroupBox>
 
-                        <GroupBox Header="Brief printen" Height="82" Margin="10,452,5,0" Name="groupBoxBriefPrinten" VerticalAlignment="Top">
+                        <GroupBox Header="Brief maken" Height="82" Margin="10,452,5,0" Name="groupBoxBriefMaken" VerticalAlignment="Top">
                                 <Grid>
-                                    <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefPrinten" Text="Deze actie print een bevestigingsbrief uit om te versturen naar de experts." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
-                                    <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonBriefPrinten" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonBriefPrinten_Click" />
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="82*" />
+                                <ColumnDefinition Width="660*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefMaken" Text="Deze actie maakt een afstudeerscriptie brief in PDF formaat om te printen en te versturen naar de experts." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" Grid.ColumnSpan="2" />
+                                    <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="556,28,0,0" Name="buttonBriefMaken" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonBriefMaken_Click" Grid.Column="1" />
                         </Grid>
                         
                         </GroupBox>
                     <GroupBox Header="Zittingen Genereren" Height="82" Margin="8,546,7,0" Name="groupBoxZittingenGen" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock FontStyle="Italic" Foreground="#FF5E5353" Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockZittingGen" Text="Deze actie genereert automatisch een planning voor de zittingen." TextWrapping="Wrap" VerticalAlignment="Top" Width="570" />
-                            <Button Background="#FFEFEFEF" Click="buttonBriefPrinten_Click" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="button1" VerticalAlignment="Top" Width="98" />
+                            <Button Background="#FFEFEFEF" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonZittingenGenereren" VerticalAlignment="Top" Width="98" />
                         </Grid>
                     </GroupBox>
                 </Grid>
