--- a/PAZ/View/LetterWindow.xaml
+++ b/PAZ/View/LetterWindow.xaml
@@ -6,8 +6,8 @@
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Brief aanpassen" Name="tiBrief">
                 <Grid>
-                    <TextBox HorizontalAlignment="Left" Margin="141,118.723,0,151.04" Name="tbInformatie" Width="385" Text="" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" />
-                    <TextBox AcceptsReturn="True" AcceptsTab="True" Height="68.723" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,44,0,0" Name="tbInleiding" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
+                    <TextBox HorizontalAlignment="Left" Margin="141,118.723,0,151.04" Name="tbReisInformatie" Width="385" Text="" HorizontalScrollBarVisibility="Disabled" VerticalScrollBarVisibility="Auto" AcceptsReturn="True" AcceptsTab="True" TextWrapping="Wrap" />
+                    <TextBox AcceptsReturn="True" AcceptsTab="True" Height="68.723" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,44,0,0" Name="tbBeginKern" Text="" TextWrapping="Wrap" VerticalAlignment="Top" VerticalScrollBarVisibility="Auto" Width="385" />
                     <TextBox AcceptsReturn="True" AcceptsTab="True" HorizontalAlignment="Left" HorizontalScrollBarVisibility="Disabled" Margin="141,298,0,85.04" Name="tbAfzenders" Text="" TextWrapping="Wrap" VerticalScrollBarVisibility="Auto" Width="385" />
                     <Label Content="Avans locatie:" FlowDirection="LeftToRight" Height="28" HorizontalAlignment="Left" HorizontalContentAlignment="Right" Margin="10,10,0,0" Name="lblAvansLocatie" VerticalAlignment="Top" Width="125" />
                     <Label Content="Begin kern:" Height="28" HorizontalAlignment="Left" Margin="10,42,0,0" Name="lblBeginKern" VerticalAlignment="Top" FlowDirection="LeftToRight" HorizontalContentAlignment="Right" Width="125" />
