--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -273,7 +273,7 @@
                     <GroupBox Header="Zittingen Genereren" Height="82" Margin="8,546,7,0" Name="groupBoxZittingenGen" VerticalAlignment="Top">
                         <Grid>
                             <TextBlock FontStyle="Italic" Foreground="#FF5E5353" Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockZittingGen" Text="Deze actie genereert automatisch een planning voor de zittingen." TextWrapping="Wrap" VerticalAlignment="Top" Width="570" />
-                            <Button Background="#FFEFEFEF" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonZittingenGenereren" VerticalAlignment="Top" Width="98" />
+                            <Button Background="#FFEFEFEF" Content="Bevestig actie" Foreground="#FF595959" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonZittingenGenereren" VerticalAlignment="Top" Width="98" Click="buttonZittingenGenereren_Click" />
                         </Grid>
                     </GroupBox>
                 </Grid>
