--- a/PAZ/View/LetterWindow.xaml
+++ b/PAZ/View/LetterWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="PAZ.LetterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="Brief exporteren" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Closing="Window_Closing">
+        Title="Brief exporteren" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Closing="Window_Closing" Background="#FFD51D53">
     <Grid>
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Brief aanpassen" Name="tiBrief">
@@ -59,6 +59,6 @@
             </TabItem>
         </TabControl>
         <Button Content="Annuleren" Height="29" HorizontalAlignment="Left" Margin="483,459,0,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="90" Click="btnAnnuleren_Click" />
-        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="579,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="78" Click="bntVerzenden_Click" />
+        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="579,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="90" Click="bntVerzenden_Click" />
     </Grid>
 </Window>
