Fixt deze het dan wel?

--- a/PAZ/View/MainWindow.xaml
+++ b/PAZ/View/MainWindow.xaml
@@ -254,7 +254,7 @@
                     </GroupBox>
                     <GroupBox Header="Email versturen" Height="82" Margin="10,362,5,0" Name="groupBoxEmailVersturen" VerticalAlignment="Top">
                             <Grid>
-                                <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockEmailVersturen" Text="Deze actie verstuurt alle emails naar de personen." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
+                                <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockEmailVersturen" Text="Deze actie helpt u om e-mail berichten te maken en versturen naar studenten en docenten." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
                                 <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonEmailVersturen" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonEmailVersturen_Click" />
                             </Grid>
                         </GroupBox>
@@ -262,7 +262,7 @@
                         <GroupBox Header="Brief maken" Height="82" Margin="10,452,5,0" Name="groupBoxBriefMaken" VerticalAlignment="Top">
                                 <Grid>
 
-                            <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefMaken" Text="Deze actie maakt een afstudeerscriptie brief in PDF formaat om te printen en te versturen naar de experts." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic"/>
+                            <TextBlock Height="45" HorizontalAlignment="Left" Margin="6,6,0,0" Name="textBlockBriefMaken" Text="Deze actie helpt u om afstudeerscriptiebrieven in PDF formaat te maken om te printen en te versturen naar de externe deskundigen." VerticalAlignment="Top" Width="570" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic"/>
                             <Button Content="Bevestig actie" Height="23" HorizontalAlignment="Left" Margin="638,28,0,0" Name="buttonBriefMaken" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonBriefMaken_Click" />
 
                         </Grid>
@@ -313,21 +313,6 @@
                             <Button Content="Opslaan" Height="23" HorizontalAlignment="Left" Margin="447,148,0,0" Name="buttonOptiesOpslaan" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" Click="buttonOptiesOpslaan_Click" />
                             </Grid>
                     </GroupBox>
-
-
-                    <GroupBox Header="E-mail instellingen" Height="220" Margin="10,220,5,0" Name="groupBoxEmailInstellingen" VerticalAlignment="Top">
-                        <Grid>
-                            <TextBlock Height="35" HorizontalAlignment="Left" Margin="24,15,0,0" Name="textBlockEmailInstellingenBeschrijving" Text="Hier kunt u e-mail instellingen wijzigen, de informatie die wordt weergeven als er een e-mail wordt onvangen door een extern persoon. Deze externe persoon zal dan zien dat de e-mail afkomstig is van de onderstaande gegevens." VerticalAlignment="Top" Width="692" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
-                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,65,0,0" Name="textBlockEmailAfzender" Text="Naam afzender" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,65,0,0" Name="textBoxEmailAfzender" VerticalAlignment="Top" Width="252" Text="Avans Planner" />
-
-                            <TextBlock Height="27" HorizontalAlignment="Left" Margin="24,115,0,0" Name="textBlockEmail" Text="E-mail afzender" VerticalAlignment="Top" Width="172" TextWrapping="Wrap" Foreground="#FF5E5353" FontStyle="Italic" />
-                            <TextBox Height="23" HorizontalAlignment="Left" Margin="293,115,0,0" Name="textBoxEmail" VerticalAlignment="Top" Width="252" Text="planner@avans.nl" />
-
-                            <Button Content="Opslaan" Height="23" HorizontalAlignment="Left" Margin="447,158,0,0" Name="buttonEmailOpslaan" VerticalAlignment="Top" Width="98" Background="#FFEFEFEF" Foreground="#FF595959" />
-                        </Grid>
-                    </GroupBox>
-
                 </Grid>
             </TabItem>
         </TabControl>
