--- a/PAZ/View/EmailWindow.xaml
+++ b/PAZ/View/EmailWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="E-mail versturen" Height="549" Width="708" WindowStartupLocation="CenterOwner" WindowStyle="SingleBorderWindow" ResizeMode="NoResize" Closing="Window_Closing">
-    <Grid Background="#FFD51D53">
+    <Grid>
         <TabControl HorizontalAlignment="Left" Name="tcGeadresseerden" VerticalAlignment="Top" Width="662" UseLayoutRounding="False" HorizontalContentAlignment="Stretch" VerticalContentAlignment="Stretch" Height="441" Margin="12,12,0,0">
             <TabItem Header="Bericht aanpassen" Name="tiBericht">
                 <Grid>
@@ -64,6 +64,6 @@
             </TabItem>
         </TabControl>
         <Button Content="Annuleren" Height="29" HorizontalAlignment="Left" Margin="483,459,0,0" Name="btnAnnuleren" VerticalAlignment="Top" Width="90" Click="btnAnnuleren_Click" />
-        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="579,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="84" Click="bntVerzenden_Click" />
+        <Button Content="Verzenden" Height="29" HorizontalAlignment="Left" Margin="579,459,0,0" Name="bntVerzenden" VerticalAlignment="Top" Width="78" Click="bntVerzenden_Click" />
     </Grid>
 </Window>
