--- a/PAZ/View/DeleteDataWindow.xaml
+++ b/PAZ/View/DeleteDataWindow.xaml
@@ -12,7 +12,7 @@
                                 <ColumnDefinition Width="29*" />
                                 <ColumnDefinition Width="282*" />
                             </Grid.ColumnDefinitions>
-                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Name="cbxLokaalSelector" Margin="6,5,18,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Checked="cbxStudentSelector_Checked" Unchecked="cbxStudentSelector_Unchecked" />
+                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Name="cbxPersoonSelector" Margin="6,5,18,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Checked="cbxPersoonSelector_Checked" Unchecked="cbxPersoonSelector_Unchecked" />
                             <ScrollViewer Height="336.08" HorizontalAlignment="Left" Margin="6,32,0,0" Name="scrollViewerPersonen" VerticalAlignment="Top" Width="299" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Grid.ColumnSpan="2"></ScrollViewer>
                             <Separator Name="separator1" Grid.ColumnSpan="2" Margin="6,21,6,351.763" />
                         </Grid>
@@ -20,7 +20,7 @@
                     <GroupBox Header="Lokalen: " Height="397.04" HorizontalAlignment="Left" Margin="335,6,0,0" Name="gbLokalen" VerticalAlignment="Top" Width="311">
                         <Grid>
                             <ScrollViewer HorizontalScrollBarVisibility="Visible" Name="scrollViewerLokalen" VerticalScrollBarVisibility="Visible" Margin="6,32,6,6" />
-                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Margin="6,6,6,0" Name="cbxPersoonSelector" VerticalAlignment="Top" Checked="cbxTeacherSelector_Checked" Unchecked="cbxTeacherSelector_Unchecked" />
+                            <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Margin="6,6,6,0" Name="cbxLokaalSelector" VerticalAlignment="Top" Checked="cbxLokalenSelector_Checked" Unchecked="cbxLokalenSelector_Unchecked" />
                             <Separator Height="2" HorizontalAlignment="Left" Margin="6,24,0,0" Name="separator2" VerticalAlignment="Top" Width="287" />
                         </Grid>
                     </GroupBox>
