--- a/PAZ/View/LetterWindow.xaml
+++ b/PAZ/View/LetterWindow.xaml
@@ -51,7 +51,7 @@
                                 <ColumnDefinition Width="282*" />
                             </Grid.ColumnDefinitions>
                             <CheckBox Content=" Alles selecteren/deselecteren" Height="16" Name="cbxExpertSelector" Margin="6,5,18,0" VerticalAlignment="Top" Grid.ColumnSpan="2" Checked="cbxExpertSelector_Checked" Unchecked="cbxExpertSelector_Unchecked" />
-                            <ScrollViewer Height="336.08" HorizontalAlignment="Left" Margin="6,32,0,0" Name="scrollViewerExperts" VerticalAlignment="Top" Width="598" VerticalScrollBarVisibility="Visible" HorizontalScrollBarVisibility="Visible" Grid.ColumnSpan="2"></ScrollViewer>
+                            <ScrollViewer Height="336.08" HorizontalAlignment="Left" Margin="6,32,0,0" Name="scrollViewerExperts" VerticalAlignment="Top" Width="598" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto" Grid.ColumnSpan="2"></ScrollViewer>
                             <Separator Name="separator1" Grid.ColumnSpan="2" Margin="6,21,6,351.763" />
                         </Grid>
                     </GroupBox>
